--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Spotify</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	</head>
 	<body id="site-body" class="no-transition">
 		
@@ -66,6 +67,13 @@
 						<li><a>|</a></li>
 						<li><a href="#">S'inscrire</a></li>
 						<li><a href="#">Se connecter</a></li>
+						<li>
+							<a href="#" id="dark-mode-toggle">
+								<span class="material-symbols-outlined">
+									toggle_off
+									</span>
+							</a>
+						</li>
 					</ul>
 				</nav>
 				<button id="menu-button">
@@ -86,7 +94,7 @@
 					</div>
 					<footer>
 						<small>
-							Offre réservée aux utilisateurs n'ayant jamais essayé Spotify Premium. Offre valable jusqu'au 31 déc. 2021.<br>
+							Offre réservée aux utilisateurs n'ayant jamais essayé Spotify Premium. Offre valable jusqu'au 31 déc. 2023.<br>
 							<a href="#">Offre soumise à conditions.</a>
 						</small>
 					</footer>
@@ -154,7 +162,7 @@
 					<footer>
 						<small>
 							Seulement 9,99 € /par mois ensuite. Offre réservée aux utilisateurs n'ayant jamais essayé Spotify Premium.<br>
-							Offre valable jusqu'au 31 déc. 2018. Offre soumise à conditions.
+							Offre valable jusqu'au 31 déc. 2023. Offre soumise à conditions.
 						</small>
 					</footer>
 				</div>
