Issue offre 3 a 4 mois

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="container">
 					<div>
 						<div>
-							<h1>Obtenez 4 mois pour 0,99&nbsp;€ !</h1>
+							<h1>Obtenez 4 mois pour 0,99&nbsp;€ </h1>
 							<h2>Seulement 9,99 € /par mois ensuite. Annulez à tout moment.</h2>
 							<a class="cta-button cta-button--blue" href="#">Démarrer Spotify Premium</a>
 						</div>
