Ajout d'une nouvelle nav test
test

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 						<li><a>|</a></li>
 						<li><a href="#">S'inscrire</a></li>
 						<li><a href="#">Se connecter</a></li>
+						<li><a href="#">Test</a></li>
 						<li>
 							<a href="#" id="dark-mode-toggle">
 								<span class="material-symbols-outlined">
